<resources>
    <string name="app_name">GTBee</string>
    <string name="action_settings">Settings</string>

    <string name="action_new_task_save">Save</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="new_task_title_hint">Enter name of task</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="new_task_due">Due: </string>
    <string name="title_activity_task_detail">TaskDetail</string>
    <string name="hello_world">Hello world!</string>

    <string name="delete_task">I\'m done!</string>

    <string name="over_due_explanation">You missed the deadline, and your account has been charged.</string>
    <string name="over_due_delete">This task can no longer be done, and I\'d like to delete it.</string>
    <string name="over_due_renew">This task still needs to be done, and I\'d like to set a new due date and up my penalty.</string>
    <string name="title_activity_beeminder_auth_info">BeeminderAuthInfo</string>

    <string name="beeminder_auth_info">In order to use this app you must have a beeminder account.</string>
    <string name="beeminder_auth_sign_in">Sign in.</string>
    <string name="settings_notifications">Notifications</string>

    <string name="drawer_open">Open preference drawer</string>
    <string name="drawer_close">Close preference drawer</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="title_activity_beemineder_int">BeeminederIntActivity</string>

    <string name="beeminder_int_title">Beemind Adding Tasks</string>
    <string name="beeminder_int_explanation">Select a current Beeminder goal, and then whenever you add a task to GTBee we\'ll automatically add a data point to that goal.</string>
    <string name="beeminder_goal">Goal: </string>

    <string name="save_task_dialog_title">Put yourself on the hook?</string>
    <string name="save_task_dialog_confirm">Create Task</string>
    <string name="save_task_dialog_cancel">Cancel</string>

    <string name="title_activity_failed_task">Failed Tasks</string>
    <string name="side_bar_faild_tasks_name">Failed Tasks</string>


</resources>
